new style black

--- a/templates/page3.html
+++ b/templates/page3.html
@@ -35,27 +35,71 @@
 
 
 <div class="shop_container">
-<div class="shop_box">
-    <div class="shop_icon">
-        <img src="/static/images/box_1.png" alt="Сундук">
+    <!-- Первая строка -->
+    <div class="shop_box">
+        <div class="shop_icon">
+            <img src="/static/images/box_1.png" alt="Сундук">
+        </div>
+        <h1>Сундук героя</h1>
+        <h2>здесь новый перс</h2>
+        <div class="shop_price">
+            <img src="/static/images/coin.png" alt="coin"> <span>10000</span>
+        </div>
     </div>
-    <h1>Сундук героя</h1>
-    <h2>здесь новый перс</h2>
-    <div class="shop_price">
-        <img src="/static/images/coin.png" alt="coin"> <span>10000</span>
+    <div class="shop_box_2">
+        <div class="shop_icon">
+            <img src="/static/images/box_1.png" alt="Сундук">
+        </div>
+        <h1>Сундук героя</h1>
+        <h2>здесь новый перс</h2>
+        <div class="shop_price">
+            <img src="/static/images/stars.png" alt="coin"> <span>100</span>
+        </div>
     </div>
-</div>
-<div class="shop_box_2">
-    <div class="shop_icon">
-        <img src="/static/images/box_1.png" alt="Сундук">
+    <div class="shop_box_3">
+        <div class="shop_icon">
+            <img src="/static/images/box_3.png" alt="Сундук">
+        </div>
+        <h1>Сундук героя</h1>
+        <h2>здесь новый перс</h2>
+        <div class="shop_price">
+            <img src="/static/images/stars.png" alt="coin"> <span>100</span>
+        </div>
     </div>
-    <h1>Сундук героя</h1>
-    <h2>здесь новый перс</h2>
-    <div class="shop_price">
-        <img src="/static/images/stars.png" alt="coin"> <span>100</span>
+
+    <!-- Вторая строка -->
+    <div class="shop_box_4">
+        <div class="shop_icon">
+            <img src="/static/images/box_3.png" alt="Сундук">
+        </div>
+        <h1>Сундук мастера</h1>
+        <h2>содержит редкий лут</h2>
+        <div class="shop_price">
+            <img src="/static/images/coin.png" alt="coin"> <span>20000</span>
+        </div>
+    </div>
+    <div class="shop_box_5">
+        <div class="shop_icon">
+            <img src="/static/images/box_3.png" alt="Сундук">
+        </div>
+        <h1>Сундук мастера</h1>
+        <h2>содержит редкий лут</h2>
+        <div class="shop_price">
+            <img src="/static/images/stars.png" alt="coin"> <span>200</span>
+        </div>
+    </div>
+    <div class="shop_box_6">
+        <div class="shop_icon">
+            <img src="/static/images/box_3.png" alt="Сундук">
+        </div>
+        <h1>Сундук мастера</h1>
+        <h2>содержит редкий лут</h2>
+        <div class="shop_price">
+            <img src="/static/images/stars.png" alt="coin"> <span>200</span>
         </div>
     </div>
 </div>
+
 
 
 
