--- a/templates/page6.html
+++ b/templates/page6.html
@@ -35,18 +35,6 @@
     </nav>
 
 
-<div class="menu_p3">
-    <a href="/page3" class="item">
-        <button class="menu-button">Ящики</button>
-    </a>
-    <a href="/page6" class="item">
-        <button class="menu-button">Герои</button>
-    </a>
-    <a href="/upgrade" class="item">
-        <button class="menu-button">Улучшения</button>
-    </a>
-</div>
-
 <div class="character-preview">
 <div class="preview" id="preview">
   <img src="/static/images/croco.png" alt="Preview">
@@ -75,9 +63,33 @@
     <img src="/static/images/fire.png" alt="Character 5">
     <p>Character 5</p>
   </div>
-  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/tor.png" data-description="Water is calm and adaptable, flowing through challenges.">
+  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png" data-description="Water is calm and adaptable, flowing through challenges.">
     <img src="/static/images/water.png" alt="Character 6">
     <p>Character 6</p>
+  </div>
+      <div class="character" data-id="7" data-name="Character 7" data-img="/static/images/tor.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/tor.png" alt="Character 7">
+    <p>Character 7</p>
+  </div>
+  <div class="character" data-id="0" data-name="Character 8" data-img="/static/images/witch.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/witch.png" alt="Character 8">
+    <p>Character 8</p>
+  </div>
+  <div class="character" data-id="9" data-name="Character 9" data-img="/static/images/pumpkin.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/pumpkin.png" alt="Character 9">
+    <p>Character 9</p>
+  </div>
+      <div class="character" data-id="10" data-name="Character 10" data-img="/static/images/ananas.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/ananas.png" alt="Character 10">
+    <p>Character 10</p>
+  </div>
+      <div class="character" data-id="11" data-name="Character 11" data-img="/static/images/frog.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/frog.png" alt="Character 11">
+    <p>Character 11</p>
+  </div>
+      <div class="character" data-id="12" data-name="Character 12" data-img="/static/images/ninja.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/ninja.png" alt="Character 12">
+    <p>Character 12</p>
   </div>
 </div>
 <button id="select-button">Выбрать</button>
