--- a/static/style.css
+++ b/static/style.css
@@ -477,7 +477,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #4a3228;
+  background: #2e2e3a;
   border-radius: 12px;
   padding: 10px 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -535,7 +535,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
     .friend-card {
       display: flex;
       align-items: center;
-      background-color: #4a3228;
+      background-color: #2e2e3a;
       border-radius: 10px;
       padding: 10px;
       margin-bottom: 25px;
@@ -563,19 +563,19 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
     }
 
 .invitation-container {
-  background-color: #4a3228;
+  background-color: #2e2e3a;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  max-width: 400px;
+  width: 320px;
   text-align: center;
   border: 2px solid #d1a34a; /* Обводка контейнера */
 
   /* Позиция контейнера */
   position: absolute;
   top: 10%;
-  left: 20%;
-  margin-bottom: 50px; /* Отступ снизу */
+  left: 25%;
+  margin-bottom: 30px; /* Отступ снизу */
   overflow: hidden; /* Убедимся, что контент не выходит за границы */
 }
 
@@ -610,49 +610,21 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
   background-color: #ffb84d;
 }
 
-.reward-section {
-  background-color: #f7f2e1; /* Light background color for better contrast */
-  border-radius: 10px;
-  padding: 20px;
-  max-width: 400px;
-  text-align: center;
-  margin: 20px auto; /* Center the reward section and add spacing */
-}
-
-.reward-section h3 {
-  font-size: 18px;
-  color: #8c4600;
-  margin: 20px 0 10px;
-}
-
-.reward-section p {
-  font-size: 14px;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.referral-icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 
 /* Стили для изображения в верхнем правом углу */
 .icon img {
   position: absolute; /* Позиционируем изображение внутри контейнера */
   top: 10px; /* Расстояние от верхнего края */
-  right: 10px; /* Расстояние от правого края */
+  right: -25px; /* Расстояние от правого края */
   width: 120px;
   height: 120px;
 }
 
 
-/* Страница Ящики */
+/* Страница Магазин */
 body.shop-page {
     min-height: 150vh; /* Минимальная высота равная высоте окна браузера */
 }
-
 
 .shop_menu {
     width: 60%; /* Уменьшенная ширина меню */
@@ -710,17 +682,19 @@ body.shop-page {
 }
 
 .shop_container {
-    display: flex; /* Выравнивание блоков по горизонтали */
+    display: flex;
+    flex-wrap: wrap; /* Разрешаем перенос на новую строку */
     align-items: center; /* Выравнивание по вертикали */
-    margin-top: 20px; /* Сместить контейнер ниже */
-    margin-left: 20px; /* Сместить контейнер ниже */
+    margin-top: 20px;
+    margin-left: 20px;
     gap: 20px; /* Расстояние между блоками */
 }
 
-.shop_box, .shop_box_2 {
+.shop_box, .shop_box_2, .shop_box_3,
+.shop_box_4, .shop_box_5, .shop_box_6 {
     width: 230px;
     height: 180px; /* Высота контейнера */
-    background-color: #2e2e3a; /* Коричневый цвет */
+    background-color: #2e2e3a; /* Основной цвет для фона */
     border: 2px solid #d1a34a; /* Обводка контейнера */
     position: relative;
     text-align: center;
@@ -731,7 +705,8 @@ body.shop-page {
 }
 
 /* Содержимое внутри остаётся ровным */
-.shop_box > *, .shop_box_2 > * {
+.shop_box > *, .shop_box_2 > *, .shop_box_3 > *,
+.shop_box_4 > *, .shop_box_5 > *, .shop_box_6 > * {
     transform: skew(10deg); /* Компенсация наклона для ровного содержимого */
 }
 
@@ -740,10 +715,10 @@ body.shop-page {
 }
 
 .shop_icon img {
-    width: 80px; /* Установите ширину картинки */
-    height: 80px; /* Установите высоту картинки */
+    width: 80px;
+    height: 80px;
     display: block;
-    margin: 0 auto; /* Центрирует изображение внутри контейнера */
+    margin: 0 auto;
 }
 
 h1 {
@@ -775,34 +750,28 @@ h2 {
 }
 
 .shop_price span {
-    font-size: 16px; /* Новый размер текста */
+    font-size: 16px;
     color: white;
     vertical-align: middle;
 }
 
+/* Дополнительные стили для уникальных контейнеров */
+.shop_box_4 {
+    background-color: #3a4a2e; /* Уникальный цвет */
+    border-color: #8dc63f; /* Уникальная обводка */
+}
 
-.menu_p3 {
-    position: fixed; /* Фиксированное позиционирование */
-    bottom: 90px; /* Увеличиваем значение, чтобы сместить элемент вниз */
-    left: 50%; /* Центрируем по горизонтали */
-    transform: translateX(-50%); /* Сдвигаем на половину ширины контейнера для центрирования */
-    display: flex; /* Используем flexbox для расположения изображений */
-    gap: 10px; /* Расстояние между картинками */
-    z-index: 1000; /* Устанавливаем высокий z-index для отображения поверх других элементов */
+.shop_box_5 {
+    background-color: #4a2e3a; /* Уникальный цвет */
+    border-color: #c63f8d; /* Уникальная обводка */
 }
-.menu-button {
-  width: 110px;
-  padding: 10px;
-  font-size: 16px;
-  background-color: #4CAF50; /* Зеленый цвет */
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  text-align: center;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s ease;
+
+.shop_box_6 {
+    background-color: #2e3a4a; /* Уникальный цвет */
+    border-color: #3f8dc6; /* Уникальная обводка */
 }
+
+
 
 .image-container {
     display: flex; /* Используем flexbox для центрирования */
@@ -824,7 +793,7 @@ body.quests-page {
 .card {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -879,7 +848,7 @@ body.quests-page {
 .card_2 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -895,7 +864,7 @@ body.quests-page {
 .card_3 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -912,7 +881,7 @@ body.quests-page {
 .card_4 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -928,7 +897,7 @@ body.quests-page {
 .card_5 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -944,7 +913,7 @@ body.quests-page {
 .card_6 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -962,7 +931,7 @@ body.quests-page {
 .card_7 {
     display: flex; /* Горизонтальное расположение элементов */
     align-items: center; /* Вертикальное выравнивание */
-    background-color: #4a3228; /* Цвет фона */
+    background-color: #2e2e3a; /* Цвет фона */
     border-radius: 10px; /* Скругленные углы */
     padding: 10px 20px; /* Внутренние отступы */
     width: 100%; /* Ширина блока */
@@ -1054,7 +1023,7 @@ position: center
 
 /* Страница герои */
 body.heroes-page {
-    min-height: 150vh; /* Минимальная высота равная высоте окна браузера */
+    min-height: 200vh; /* Минимальная высота равная высоте окна браузера */
 }
 
  .menu_char {
@@ -1062,7 +1031,7 @@ body.heroes-page {
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       width: 400px;
-      margin: 300px auto 0 auto;
+      margin: 220px auto 0 auto;
     }
 
     .character {
@@ -1167,7 +1136,7 @@ body.heroes-page {
   top: 150px;
   right: 100px;
   padding: 10px 20px;
-  background-color: #4CAF50; /* Зеленый цвет */
+  background-color: #2e2e3a; /* Зеленый цвет */
   color: white;
   border: none;
   border-radius: 5px;
@@ -1407,7 +1376,7 @@ body.up_page {
   padding: 0; /* Убираем внутренний отступ */
   border-radius: 10px; /* Округление только для общего контейнера */
   margin-top: 50px;
-  background-color: #4a3228; /* Общий фон */
+  background-color: #2e2e3a; /* Общий фон */
   overflow: hidden; /* Для корректного отображения границ */
   border: 2px solid #d1a34a; /* Обводка контейнера */
 }
@@ -1417,28 +1386,28 @@ body.up_page {
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
-  background-color: #4a3228; /* Совпадает с общим фоном */
+
 }
 .item_up2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
-  background-color: #4a3228; /* Совпадает с общим фоном */
+
 }
 .item_up3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
-  background-color: #4a3228; /* Совпадает с общим фоном */
+
 }
 .item_up4 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
-  background-color: #4a3228; /* Совпадает с общим фоном */
+
 }
 
 .item_up:not(:last-child) {
