--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -26,7 +26,7 @@
     <a href="/page11" class="nav-button">
       <figure>
         <img src="static/images/top.png" alt="Топ" width="15" height="15">
-        <figcaption>Миры</figcaption>
+        <figcaption>Босс</figcaption>
       </figure>
     </a>
   </div>
