--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -25,7 +25,7 @@
     </a>
     <a href="/page11" class="nav-button">
       <figure>
-        <img src="static/images/top.png" alt="Топ" width="15" height="15">
+        <img src="static/images/boss.png" alt="Топ" width="15" height="15">
         <figcaption>Босс</figcaption>
       </figure>
     </a>
