--- a/templates/page11.html
+++ b/templates/page11.html
@@ -2,18 +2,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Миры</title>
+    <title>Босс</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
-<div class="button-container">
-    <button class="button top">Мир 3</button>
-    <button class="button left">Мир 2</button>
-    <button class="button right">Мир 4</button>
-    <button class="button bottom">Мир 1</button>
-    <button class="button center">Мир 5</button>
-</div>
+
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
       <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
