--- a/templates/page3.html
+++ b/templates/page3.html
@@ -26,9 +26,6 @@
             <li class="shop_menu-item">
                 <a href="/upgrade">Улучшения</a>
             </li>
-            <li class="shop_menu-item">
-                <a href="#">Инвентарь</a>
-            </li>
         </ul>
     </nav>
 
@@ -37,6 +34,7 @@
 <div class="shop_container">
     <!-- Первая строка -->
     <div class="shop_box">
+        <div class="shop_discount">ЛУЧШЕЕ</div> <!-- Добавлено для метки -->
         <div class="shop_icon">
             <img src="/static/images/box_1.png" alt="Сундук">
         </div>
