--- a/templates/page1.html
+++ b/templates/page1.html
@@ -49,9 +49,10 @@
 </div>
 <div class="progress-label" id="progressLabel">Бронзовая лига</div>
     <!-- Полоса энергии -->
-    <div class="energy-container">
-        <div class="energy-bar" id="energyBar"></div>
-    </div>
+<div class="energy-container">
+    <div class="energy-bar" id="energyBar">Энергия: 1000</div>
+</div>
+
 
 
 
