--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -51,7 +51,7 @@
     <div class="item-icon">⚡</div>
     <div class="item-info">
       <p class="item-title">Запас энергии</p>
-      <p class="item-details">100 • Уровень 1</p>
+      <p class="item-details">1000 • Уровень 1</p>
     </div>
     <div class="item-action">></div>
   </div>
@@ -151,9 +151,9 @@
         <div class="price_up_buy">
             <!-- Картинка монеты -->
             <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
-            <span class="coin">2,000</span>
+            <span class="coin_up">2,000</span>
         </div>
-        <button class="upgrade-button">УЛУЧШИТЬ</button>
+        <button class="upgrade-button_3">УЛУЧШИТЬ</button>
     </div>
 </div>
 
