--- a/static/style.css
+++ b/static/style.css
@@ -49,9 +49,8 @@ body {
 .energy-container {
     position: fixed;
     bottom: 100px;
-    left: 10%;
-    transform: translateX(-50%);
-    width: 40px; /* Фиксированная ширина */
+    left: 10px;
+    width: 200px; /* Фиксированная ширина */
     height: 20px;
     background-color: #ddd;
     border-radius: 10px;
@@ -1667,8 +1666,15 @@ body.up_page {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-.upgrade-button:hover {
-    background-color: #cc8800;
+.upgrade-button_3 {
+    background-color: #ffaa00;
+    border: none;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .upgrade-message {
