--- a/static/style.css
+++ b/static/style.css
@@ -1455,6 +1455,11 @@ body.up_page {
   color: #d1a34a;
 }
 
+.item-details_3 {
+  font-size: 14px;
+  color: #d1a34a;
+}
+
 .item-action {
   font-size: 20px;
   color: #d1a34a;
@@ -1539,7 +1544,15 @@ body.up_page {
     background: rgba(0, 0, 0, 0.5);
     z-index: 998;
 }
-
+.overlay_3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+}
 /* Кнопка закрытия */
 .close-button {
     position: absolute;
