--- a/templates/page1.html
+++ b/templates/page1.html
@@ -50,7 +50,7 @@
 <div class="progress-label" id="progressLabel">Бронзовая лига</div>
     <!-- Полоса энергии -->
 <div class="energy-container">
-    <div class="energy-bar" id="energyBar">Энергия: 1000</div>
+    <div class="energy-bar" id="energyBar">1000</div>
 </div>
 
 
@@ -83,8 +83,6 @@
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_box.js') }}"></script>
-<script src="{{ url_for('static', filename='script_up.js') }}"></script>
-
 
 {% include '_nav.html' %}
 
