--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -47,14 +47,14 @@
     </div>
     <div class="item-action">></div>
   </div>
-  <div class="item_up3">
-    <div class="item-icon">⚡</div>
-    <div class="item-info">
-      <p class="item-title">Запас энергии</p>
-      <p class="item-details">1000 • Уровень 1</p>
-    </div>
-    <div class="item-action">></div>
+<div class="item_up3">
+  <div class="item-icon">⚡</div>
+  <div class="item-info">
+    <p class="item-title">Запас энергии</p>
+    <p class="item-details_3">100 • Уровень 1</p>
   </div>
+  <div class="item-action">></div>
+</div>
   <div class="item_up4">
     <div class="item-icon">🔄</div>
     <div class="item-info">
@@ -130,7 +130,7 @@
 
 <div class="background">
     <!-- Слой затемнения -->
-    <div class="overlay" style="display: none;"></div>
+    <div class="overlay_3" style="display: none;"></div>
 
     <!-- Окно -->
     <div class="container_up_buy_3" style="display: none;">
@@ -151,7 +151,7 @@
         <div class="price_up_buy">
             <!-- Картинка монеты -->
             <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
-            <span class="coin_up">2,000</span>
+            <span class="coin_up3">2,000</span>
         </div>
         <button class="upgrade-button_3">УЛУЧШИТЬ</button>
     </div>
@@ -190,6 +190,7 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_box.js') }}"></script>
 {% include '_nav.html' %}
 </body>
