--- a/templates/page2.html
+++ b/templates/page2.html
@@ -47,6 +47,7 @@
     <h2 class="friends-count">0 ДРУЗЕЙ</h2>
     <button class="how-it-works">Доход с друзей</button>
   </div>
+</div>
 
 
     <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
